[package]
name = "neat"
version = "0.1.0"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
turtle = {git = "https://github.com/sunjay/turtle"}
bincode = "1.3.1"
serde = "1.0.111"
serde_derive = "1.0.111"
